2013-12-01  Charlie Zender  <zender@uci.edu>

	* Rename old ncea program to nces (netCDF ensemble statistics)

	* Rename old ncea-mode to ncfe-mode (netCDF file ensemble)

	* Rename old nces-mode to ncge-mode (netCDF group ensemble)

2013-11-23  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.9 release procedure:
 	Changes since nco-4_3_8: nces, XML
	cd ~/nco;cvs tag -d nco-4_3_9;cvs tag -d nco-4_3_9-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.9 release"
	cvs tag -c nco-4_3_9;cvs tag -c nco-4_3_9-1

	* Add nco_srm.[ch] for streams

2013-11-22 Pedro Vicente  <pvicente@uci.edu>

	* nces: Regression #4 multi file ensembles

2013-11-22  Charlie Zender  <zender@uci.edu>

	* XML mode add informational comments like CDL with -D 1

	* XML mode isolate toolsui/ncgen/XML bugginess in buggy.cdl so in_grp.cdl "just works"

	* XML mode add precise multi-dimensional NC_CHAR warnings when dbg_lbl > 0

	* XML mode change default and backup string separator to "*" and "*|*" respectively
	NB: Buggy NcML toolsui breaks on long separators like "foobar"

	* XML mode add ugly shape="" attribute to scalars for fuller NcML compliance

2013-11-21  Charlie Zender  <zender@uci.edu>

	* XML mode ensure string variables and attributes do not contain string separator

2013-11-20  Charlie Zender  <zender@uci.edu>

	* XML mode never print blank (underscore) for missing values

	* Workaround NcML limitations on uint64 types by removing
	max(uint64) values from input CDL files other than buggy.cdl

2013-11-19  Charlie Zender  <zender@uci.edu>

	* XML mode print non-whitespace separators for 1D character array attributes

	* XML mode print non-whitespace separators for scalar strings for brain-dead programs

2013-11-18  Charlie Zender  <zender@uci.edu>

	* Neaten XML indentation

	* Add more backwards-incompatible members to buggy.cdl

	* XML mode use stub-name not full name in group name element

2013-11-16  Charlie Zender  <zender@uci.edu>
