@@ -1,7 +1,7 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/ncra.c,v 1.466 2013-12-02 01:05:56 zender Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/ncra.c,v 1.467 2013-12-02 17:43:32 zender Exp $ */
 
 /* This single source file compiles into three separate executables:
-   ncra -- netCDF running averager
+   ncra -- netCDF record averager
    nces -- netCDF ensemble statistics
    ncrcat -- netCDF record concatenator */
 
@@ -165,8 +165,8 @@ main(int argc,char **argv)
   char *sng_cnv_rcd=NULL_CEWI; /* [sng] strtol()/strtoul() return code */
   char trv_pth[]="/"; /* [sng] Root path of traversal tree */
 
-  const char * const CVS_Id="$Id: ncra.c,v 1.466 2013-12-02 01:05:56 zender Exp $"; 
-  const char * const CVS_Revision="$Revision: 1.466 $";
+  const char * const CVS_Id="$Id: ncra.c,v 1.467 2013-12-02 17:43:32 zender Exp $"; 
+  const char * const CVS_Revision="$Revision: 1.467 $";
   const char * const opt_sht_lst="3467ACcD:d:FG:g:HhL:l:n:Oo:p:P:rRt:v:X:xY:y:-:";
 
   cnk_sct **cnk=NULL_CEWI;
