@@ -1,3 +1,7 @@
+2013-12-02  Charlie Zender  <zender@uci.edu>
+
+	* Document nces and group mode in nco.texi, man pages, internally
+
 2013-12-01  Charlie Zender  <zender@uci.edu>
 
 	* Rename old ncea program to nces (netCDF ensemble statistics)
